# Config_Homework

./: cmdlog.txt  log.json
Homework1/: CMakeLists.txt  CommandHandler.cpp  CommandHandler.h  Unzipper.cpp  Unzipper.h  ZipHandler.cpp  ZipHandler.h  Zipper.cpp  Zipper.h  a  log.json  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Homework2/: commits.json  config.xml  dependencyVisualizer.py  out.mmd
Homework3/: languageConverter.py  out.json
Homework4/: Assembler.cpp  Assembler.h  CMakeLists.txt  Global.h  Interpreter.cpp  Interpreter.h  asm.cpp  int.cpp
Homework4/Release/: bin.edc  log.xml  out.xml  test.edl
